--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,8 @@
       // If so, subsribe to event.
       window.mySingleton = { id: 'singleton', label:'something', data:{a:'some', b:'data', c:'to', d:'handle'} }    
       window.addEventListener('load', () => {
-        __MY_EXTENSION_HOOK__.sendMessage({data:window.mySingleton, source: 'my-chrome-extension-web-page'});
+        console.log('load!')
+        window.postMessage({data:window.mySingleton, source: 'my-chrome-extension-web-page'});
       });
 
   </script>
