Added console logs to show when extension components are loaded

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <html>
   <body>
     <script>
+      console.log('web page')
       // Check if extension has been installed or not. 
       // If so, subsribe to event.
       window.mySingleton = { id: 'singleton', label:'something', data:{a:'some', b:'data', c:'to', d:'handle'} }    
